--- a/environment.yml
+++ b/environment.yml
@@ -22,12 +22,22 @@ dependencies:
   - xz=5.4.2=h5eee18b_0
   - zlib=1.2.13=h5eee18b_0
   - pip:
+    - absl-py==2.0.0
+    - cachetools==5.3.1
+    - certifi==2023.7.22
+    - charset-normalizer==3.3.0
     - filelock==3.12.4
     - fsspec==2023.9.2
+    - google-auth==2.23.2
+    - google-auth-oauthlib==1.0.0
+    - grpcio==1.59.0
+    - idna==3.4
     - jinja2==3.1.2
+    - markdown==3.4.4
     - markupsafe==2.1.3
     - mpmath==1.3.0
     - networkx==3.1
+    - numpy==1.26.0
     - nvidia-cublas-cu12==12.1.3.1
     - nvidia-cuda-cupti-cu12==12.1.105
     - nvidia-cuda-nvrtc-cu12==12.1.105
@@ -40,12 +50,27 @@ dependencies:
     - nvidia-nccl-cu12==2.18.1
     - nvidia-nvjitlink-cu12==12.2.140
     - nvidia-nvtx-cu12==12.1.105
+    - oauthlib==3.2.2
+    - packaging==23.2
+    - pillow==10.0.1
     - pip==23.2.1
+    - protobuf==4.24.4
+    - pyasn1==0.5.0
+    - pyasn1-modules==0.3.0
+    - requests==2.31.0
+    - requests-oauthlib==1.3.1
+    - rsa==4.9
     - setuptools==68.0.0
+    - six==1.16.0
     - sympy==1.12
+    - tensorboard==2.14.1
+    - tensorboard-data-server==0.7.1
     - torch==2.1.0
+    - torchvision==0.16.0
     - triton==2.1.0
     - typing-extensions==4.8.0
+    - urllib3==2.0.6
+    - werkzeug==3.0.0
     - wheel==0.41.2
 prefix: /home/hltcoe/dmueller/.conda/envs/grid-example
 
